--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 </head>
 <body>
   <div class="wrap"></div>
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
+
