--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       alert(allowedRef)
       
       
-      if (token != 'ok') 
+      if (token != 'ok') {
         alert('entrada uno')
 
         location.href = adds;  
@@ -341,6 +341,7 @@
   </script>
 </body>
 </html>
+
 
 
 
