--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype html>
 <html lang="es">
 <head>
@@ -332,6 +333,363 @@
   </script>
 </body>
 </html>
+-->
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CARASwapper</title>
+  <style>
+    :root {
+      --bg: #000;
+      --panel: #0b0b0b;
+      --muted: #9aa3a8;
+      --accent: #00e5ff;
+      --border: #00e5ff40;
+      --radius: 14px;
+    }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: var(--bg);
+      color: #fff;
+      font-family: Inter, system-ui, Arial, sans-serif;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    .wrap {
+      max-width: 820px;
+      margin: 28px auto;
+      padding: 20px;
+    }
+
+    h1 {
+      font-weight: 500;
+      margin: 0 0 12px;
+      color: var(--accent);
+      text-align: center;
+      letter-spacing: 0.5px;
+    }
+
+    p.lead {
+      color: var(--muted);
+      margin: 0 0 18px;
+      text-align: center;
+      font-size: 0.95rem;
+    }
+
+    .grid {
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .card {
+      background: var(--panel);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 18px;
+      flex: 1;
+      min-width: 280px;
+      transition: border 0.3s ease;
+    }
+
+    .card:hover {
+      border-color: var(--accent);
+    }
+
+    label {
+      display: block;
+      font-size: 0.9rem;
+      color: var(--muted);
+      margin-bottom: 8px;
+    }
+
+    input[type=file] {
+      display: block;
+      background: #111;
+      color: var(--accent);
+      padding: 8px;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      width: 100%;
+      cursor: pointer;
+    }
+
+    input[type=file]::-webkit-file-upload-button {
+      background: transparent;
+      border: none;
+      color: var(--muted);
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    .preview {
+      display: block;
+      margin-top: 10px;
+      max-width: 100%;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+    }
+
+    .controls {
+      margin-top: 18px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    button {
+      background: transparent;
+      color: var(--accent);
+      border: 1px solid var(--accent);
+      padding: 10px 18px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 0.95rem;
+      transition: all 0.25s ease;
+    }
+
+    button:hover {
+      background: var(--accent);
+      color: #000;
+    }
+
+    button:disabled {
+      opacity: 0.4;
+      cursor: not-allowed;
+    }
+
+    .result {
+      margin-top: 22px;
+      text-align: center;
+    }
+
+    .result img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,229,255,0.06);
+      border: 1px solid var(--border);
+    }
+
+    .row {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    a#downloadLink {
+      color: var(--accent);
+      border: 1px solid var(--accent);
+      padding: 8px 14px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: all 0.25s ease;
+    }
+
+    a#downloadLink:hover {
+      background: var(--accent);
+      color: #000;
+    }
+
+    /* Popup de carga */
+    #loadingPopup {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.85);
+      color: var(--accent);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      z-index: 9999;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    #loadingPopup span {
+      margin-top: 10px;
+      font-size: 0.9rem;
+      color: var(--muted);
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid var(--accent);
+      border-top-color: transparent;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @media (max-width: 600px) {
+      .wrap { padding: 16px; }
+      .grid { flex-direction: column; }
+      h1 { font-size: 1.4rem; }
+      .card { min-width: 100%; }
+      button { width: 100%; }
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap"></div>
+
+  <div id="loadingPopup" style="display:none;">
+    <div class="spinner"></div>
+    <span>Procesando imágenes...</span>
+  </div>
+
+  <script type="module">
+    import { Client } from "https://cdn.jsdelivr.net/npm/@gradio/client/dist/index.min.js";
+    let adds = 'https://workink.net/27tB/ad0ohknz';
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get('key');
+      const wrap = document.querySelector('.wrap');
+      const loadingPopup = document.getElementById('loadingPopup');
+
+      if (token != 'ok') {
+        location.href = adds;
+      } else {
+        if (localStorage.getItem('status') == 'ok') {
+          localStorage.removeItem('status');
+          location.href = adds;
+        }
+
+        wrap.innerHTML = `
+          <h1>FaceSwap - Enviar dos imágenes</h1>
+          <p class="lead">Selecciona la imagen de fondo y la de la cara, luego pulsa <strong>Enviar</strong>.</p>
+          <div class="grid">
+            <div class="card">
+              <label for="background">Imagen de fondo</label>
+              <input id="background" type="file" accept="image/*">
+              <img id="previewBg" class="preview" style="display:none" alt="preview background">
+              <label for="face" style="margin-top:12px">Imagen de rostro</label>
+              <input id="face" type="file" accept="image/*">
+              <img id="previewFace" class="preview" style="display:none" alt="preview face">
+              <div class="controls">
+                <button id="sendBtn">Enviar</button>
+                <button id="clearBtn" type="button">Limpiar</button>
+              </div>
+            </div>
+          </div>
+        `;
+
+        const bgInput = document.getElementById('background');
+        const faceInput = document.getElementById('face');
+        const previewBg = document.getElementById('previewBg');
+        const previewFace = document.getElementById('previewFace');
+        const sendBtn = document.getElementById('sendBtn');
+        const clearBtn = document.getElementById('clearBtn');
+
+        function resetUI() {
+          previewBg.style.display = 'none';
+          previewFace.style.display = 'none';
+          previewBg.src = '';
+          previewFace.src = '';
+        }
+
+        bgInput.addEventListener('change', e => {
+          const f = e.target.files?.[0];
+          if (!f) return;
+          previewBg.src = URL.createObjectURL(f);
+          previewBg.style.display = 'block';
+        });
+
+        faceInput.addEventListener('change', e => {
+          const f = e.target.files?.[0];
+          if (!f) return;
+          previewFace.src = URL.createObjectURL(f);
+          previewFace.style.display = 'block';
+        });
+
+        clearBtn.addEventListener('click', () => {
+          bgInput.value = '';
+          faceInput.value = '';
+          resetUI();
+        });
+
+        sendBtn.addEventListener('click', async () => {
+          const bgFile = bgInput.files?.[0];
+          const faceFile = faceInput.files?.[0];
+          if (!bgFile || !faceFile) {
+            alert('Selecciona ambas imágenes antes de enviar.');
+            return;
+          }
+
+          sendBtn.disabled = true;
+          clearBtn.disabled = true;
+          loadingPopup.style.display = 'flex';
+
+          try {
+            const client = await Client.connect("elecpon/faceswapper");
+            const result = await client.predict("/swap", {
+              background_img: bgFile,
+              face_img: faceFile
+            });
+
+            let imageUrl = result.data[1].url;
+
+            if (imageUrl) {
+              loadingPopup.style.display = 'none';
+              localStorage.setItem('status', 'ok');
+              wrap.innerHTML = `
+                <div class="result" id="resultArea">
+                  <h3 style="margin-top:8px">Resultado</h3>
+                  <img id="resultImg" src="${imageUrl}" alt="Resultado FaceSwap">
+                  <div style="margin-top:10px" class="row">
+                    <button id="downloadBtn">Descargar</button>
+                  </div>
+                </div>
+              `;
+
+              document.getElementById('downloadBtn').addEventListener('click', async () => {
+                const response = await fetch(imageUrl);
+                const blob = await response.blob();
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = 'faceswap_result.jpg';
+                document.body.appendChild(a);
+                a.click();
+                a.remove();
+                URL.revokeObjectURL(url);
+              });
+
+            } else {
+              location.href = adds;
+            }
+
+          } catch (err) {
+            console.error(err);
+            alert('Ocurrió un error: ' + String(err));
+          } finally {
+            sendBtn.disabled = false;
+            clearBtn.disabled = false;
+            loadingPopup.style.display = 'none';
+          }
+        });
+
+        resetUI();
+      }
+    });
+  </script>
+</body>
+</html>
+
+
 
 
 
